src/client/assets/css/index.css
@import url('https://fonts.googleapis.com/css?family=Noto+Serif+KR');

@font-face {
    font-family: 'Montserrat', sans-serif;
    src: url('https://fonts.googleapis.com/css?family=Montserrat');
}
@font-face {
    font-family: 'Montserrat-bold', sans-serif;
    src: url('https://fonts.googleapis.com/css?family=Montserrat:800');
}

@font-face {
  font-family: 'Mill-Goudy';
  src: url( 'https://fonts.googleapis.com/css?family=Sorts+Mill+Goudy')
}

@font-face {
    font-family: 'Tinos', serif;
    src: url('https://fonts.googleapis.com/css?family=Tinos:400i');
}




* {
    margin: 0;
    padding: 0;
    font-family: 'Montserrat', sans-serif;
  }


  /********* BUTTONS (STYLES __ 1)  */

  .main__btn {
    padding: 1rem 2.5rem;
    border-radius: 30px;
    cursor: pointer;
    overflow: hidden;
    color: white;
  }
  .link__btn {
    text-decoration: none;
    color: white;
    padding: 13px;
    border-radius: 30px;
  }


  .hover_link {
    text-decoration: none;
    color: white;
    padding: 13px;
    border-radius: 30px;
    /* margin-bottom: -18rem; */
  }
  
 



.title__home {
  color: white;
  font-size: 2.7rem;
  font-family: 'Montserrat-bold', sans-serif;
}


.subtitle__home {
  font-family: 'Tinos', serif;
  color: white;
  font-style: italic;
  font-size: 2rem;
  padding-top: 1.5rem;
}
.btn_container_home {
  padding-top: 3rem;
}

@media (max-width: 800px) {
  .title__home {
    font-size: 2.4rem;
  }
  .subtitle__home {
    font-size: 1.5rem;
  }
}

@media (max-width: 550px) {
    .btn_container_home {
      padding-top: 0rem;
      padding-bottom: 5rem;
    }
    .subtitle__home {
      font-size: 1.3rem;
    }
    .title__home {
      font-size: 1.6rem;
    }
}


.front__page__ntc {
    background-image: url('../images/boats1.JPG');
    background-position:  center;
    background-size: cover;
    height: 100vh;
    display: flex;
    flex-direction:row ;
    text-align: right;
}
.brand__title {
  font-family: 'Mill-Goudy';
  color: white;
  
  font-size: 4rem;
  padding-bottom: 9rem;
}
.brand__subtitle {
  font-family: 'Mill-Goudy';
  
  color: white;
  font-size: 2rem;
}


.btn__containers > span {
  position: relative;

}


.brand__ntc__container {

    text-align: right;
    padding-bottom: 0rem;
    padding-top: 20rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding-left: 2rem;
    height: 100vh;
}
.button__container_ntc {
  padding-top: 3rem;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
  padding-left:  13rem;
  padding-right:  13rem;
}

@media (max-width: 970px) {
  .brand__ntc__container {
    line-height: 5rem;
    padding-top: 9rem;

  }

}



@media (max-width: 700px) {

  .front__page__ntc {
    height: 80vh;
  }
  .brand__ntc__container  {
    line-height: 7.2rem;
  }
}

@media (max-width: 800px) {

  .front__page__ntc { 
    overflow: hidden;
    width: 100%;
  }
    .brand__title {
      font-size: 2.6rem;
      padding-bottom: 2.6rem;
    }
}
@media (max-width: 760px) {
  .brand__title {
    font-size: 1.8rem;
    padding-bottom: 2.6rem;
  }
  
  .button__container_ntc {
    padding-left:  0rem;
    padding-right:  0rem;
  }
}
@media (max-width: 530px) {
  .brand__title {
    font-size: 1.5rem;
  }
}
@media (max-width: 380px) {

  .brand__title {
    font-size: 2rem;
    line-height: 6rem;
  }
  .brand__subtitle {
    display: none;
  }
}


h1 {
  overflow: hidden;
  text-align: center;
}
.aboutTitle {
  padding-top: 40px;
  padding-bottom: 40px;
  text-align: center;
}
.about__content {
  text-align: center;
}
.mainAbout {
  background-color: black;
  opacity: 0.78;
  color: white;
  line-height: 5rem;
  padding: 8rem;
}
h1.aboutTitle:before,
h1.aboutTitle:after {
  background-color: #00acc1;
  content: "";
  display: inline-block;
  height: 5.2px;
  position: relative;
  vertical-align: middle;
  width: 10%;
}



h1.aboutTitle:before {
  right: 0.5em;
  margin-left: -50%;
}

h1.aboutTitle:after {
  left: 0.5em;
  margin-right: -50%;
}

.about__content {
  color: black;
  background-image: url('../images/dive.JPG');
	background-attachment: fixed;
	background-position: center;
	background-repeat: no-repeat;
  background-size: cover;
}
.section__one {
  display: flex;
  flex-direction: row;
}

.section__one_bck {
  background: url('../images/Background\ for\ 5.jpg.JPG');
	background-position: center;
	background-attachment: fixed;
	background-repeat: no-repeat;
  background-size: cover;
  color: white;
  height: 100vh;
  overflow: hidden;
  display: flex;
  flex-direction: column;
}

.about__items__one {
  height: 100vh;
  text-align: center;
  display: flex;
  flex-direction: column;
  overflow: hidden;
}
.about__p {
  font-size: 1.3rem;
  padding-bottom: 1rem;
}
.about__items {
  text-align: center;
  line-height: 2.5rem;
  max-width: 52.8%;
  display: flex;
  flex-direction: column;
  align-content: center;
  justify-content: center;
  background-color: cornflowerblue;
  color: #eeeeee;
}

.about__items__two {
  text-align: center;
  line-height: 2.5rem;
  max-width: 52.8%;
  display: flex;
  flex-direction: column;
  align-content: center;
  justify-content: center;
  background-color: cornflowerblue;
  color: #eeeeee;
}
.about__title {
    text-transform: uppercase;
    font-size: 2rem;
    font-family: 'Montserrat-bold', sans-serif;
    letter-spacing: 0.2rem;
    text-align: center;
    position: relative;
    top: 7rem;
}
.img__about {
    height: 50%;
    width: 60%;
}
.img__about__tours {
    width: 73%;
}
@media (max-width: 1000px) {
  .about__title {
    top: 0rem;
    padding: 5rem 0rem;

}

}
/* ... */

